<resources>
  <string name="app_name">PlayHvZ</string>
  <string name="server_client_id" translatable="false">999009690521-v4bfpi2jfo69n65v6ptj1p72o37g9jh1.apps.googleusercontent.com</string>
  <string name="default_notification_channel_id" translatable="false">playhvz_default_channel</string>
  <string name="default_notification_channel_name" defintion="This is the name users will see under Android system settings for app notifications.
      It should describe the category of notifications that will be sent through this channel." translatable="true">
    General Announcements
  </string>
  <string name="default_notification_title">From HvZ CDC</string>
  <string name="allegiance_option_human" definition="Label for the radio button indicating human allegiance.">
    Resistance
  </string>
  <string name="allegiance_option_zombie" definition="Label for the radio button indicating zombie allegiance.">
    Horde
  </string>
  <string name="allegiance_option_undeclared" definition="Label for the radio button indicating undeclared allegiance.">
    Undeclared
  </string>
  <string name="allegiance_option_everyone" definition="Label for the radio button indicating no allegiance filter.">
    Everyone
  </string>
  <string name="allegiance_status_alive" definition="Status indicating the player is alive.">
    Alive
  </string>
  <string name="allegiance_status_dead" definition="Status indicating the player is a zombie.">
    Living dead
  </string>
  <string name="create_game_success_toast" definition="Toast shown when a game is successfully created.">
    Created: %1$s
  </string>
  <string name="create_game_error_exists" definition="Error message shown when a game name already exists.">
    %1$s already exists!
  </string>
  <string name="boolean_true" definition="True.">
    True
  </string>
  <string name="boolean_false" definition="False.">
    False
  </string>
  <string name="boolean_correct" definition="Correct.">
    Correct
  </string>
  <string name="boolean_incorrect" definition="Incorrect.">
    Incorrect
  </string>
  <string name="button_add" definition="Button to add selected item to a list or group.">
    Add
  </string>
  <string name="button_back" definition="Button to select to go back to previous screen.">
    Back
  </string>
  <string name="button_cancel" definition="Cancel button.">
    Cancel
  </string>
  <string name="button_create" definition="Create button.">
    Create
  </string>
  <string name="button_delete" definition="Delete button.">
    Delete
  </string>
  <string name="button_dismiss" definition="Dismiss button.">
    Dismiss
  </string>
  <string name="button_edit" definition="Edit button.">
    Edit
  </string>
  <string name="button_move_up" definition="Move up button.">
    Move up
  </string>
  <string name="button_move_down" definition="Move down button.">
    Move down
  </string>
  <string name="button_remove_ordering" definition="Remove ordering button.">
    Remove ordering
  </string>
  <string name="button_next" definition="Button to select when saving changes and going to the next screen.">
    Next
  </string>
  <string name="button_set" definition="Button to set field to selected item.">
    Set
  </string>
  <string name="button_submit" definition="Button to select when saving changes.">
    Submit
  </string>
  <string name="button_refresh" definition="Refresh button.">
    Refresh
  </string>
  <string name="button_update" definition="Button to select when saving changes.">
    Update
  </string>
  <string name="button_use" definition="Button to select when saving changes.">
    Use
  </string>
  <string name="chat_creation_checkbox_allegiance" definition="Label for the checkbox indicating if the room has an allegiance filter.">
    Enforce members are only:
  </string>
  <string name="chat_creation_name_label" definition="Label for the chat room name input textview.">
    Chat name
  </string>
  <string name="chat_creation_name_hint" definition="Hint text for the chat room name text input.">
    Nerf Friends
  </string>
  <string name="chat_list_toolbar" definition="Toolbar title for the chat list view.">
    Chats
  </string>
  <string name="chat_list_for_admin_toolbar" definition="Toolbar title for the admin chat list view.">
    Admin chats
  </string>
  <string name="chat_room_toolbar" definition="Toolbar title for the chat room view if the room name won't load.">
    Chat
  </string>
  <string name="chat_info_add_player" definition="Option to add a player to the chat room.">
    Add player
  </string>
  <string name="chat_info_title" definition="Title for the chat info page.">
    Options
  </string>
  <string name="chat_info_leave" definition="Option to leave the chat room.">
    Leave
  </string>
  <string name="chat_info_leave_dialog_title" definition="Title for dialog confirming user wants to leave chat room.">
    Really leave \'%1$s\'?
  </string>
  <string name="chat_info_leave_dialog_description" definition="Dialog message informing user they can't rejoin chat room after leaving.">
    This can\'t be undone, you\'ll have to ask someone else to add you back.
  </string>
  <string name="chat_info_leave_dialog_with_admins_description" definition="Dialog message informing user they can rejoin chat room after leaving.">
    You can rejoin, just click chat with an admin again.
  </string>
  <string name="chat_info_leave_dialog_confirmation" definition="Confirmation button for leave chat dialog.">
    Yep, leave
  </string>
  <plurals name="chat_info_member_count" definition="String expressing the number of members in the chat room.">
    <item quantity="one">%1$s member</item>
    <item quantity="other">%1$s members</item>
  </plurals>
  <string name="chat_info_notifications_option" definition="Option to enable/disable notifications in the chat room.">
    Allow notifications
  </string>
  <string name="chat_info_remove_dialog_title" definition="Title for dialog confirming user wants to remove player from chat room.">
    Really remove %1$s?
  </string>
  <string name="chat_info_remove_dialog_description" definition="Dialog message informing user they can't rejoin chat room after removing player.">
    They can\'t rejoin by themselves. They\'ll have to ask someone else to add them back.
  </string>
  <string name="chat_info_remove_dialog_confirmation" definition="Confirmation button for removing player chat dialog.">
    Yep, remove
  </string>
  <string name="chat_input_hint" definition="Hint text for chat room message input.">
    Message %1$s
  </string>
  <string name="collapsible_section_add_new" definition="Label for add new collapsible section button.">
    Add new item
  </string>
  <string name="collapsible_section_title_hint_text" definition="Hint text for collapsible section title text.">
    Add title
  </string>
  <string name="collapsible_section_content_hint_text" definition="Hint text for collapsible section content text.">
    Add some content
  </string>
  <string name="collapsible_section_remove_dialog_title" definition="Title for the delete confirmation dialog.">
    Really delete section?
  </string>
  <string name="collapsible_section_remove_dialog_content" definition="Description for the delete confirmation dialog.">
    This can\'t be undone.
  </string>
  <string name="datetime_dialog_title" definition="Title for the date time selection dialog.">
    Set date and time
  </string>
  <string name="force_upgrade_button" definition="Button for upgrading the app to a newer version.">
    Upgrade
  </string>
  <string name="force_upgrade_header" definition="Label above the force upgrade image.">
    Oh
  </string>
  <string name="force_upgrade_message" definition="Message telling the user they need to upgrade their app.">
    Looks like your app is out of date, upgrade now to experience the wonder of our bug fixes!
  </string>
  <string name="game_settings_game_name_label" definition="Label for game title text input.">
    Name
  </string>
  <string name="game_settings_game_name_sublabel" definition="Sub-label for game title text input explaining how game name is used.">
    Players use this to join your game
  </string>
  <string name="game_settings_game_name_hint_text" definition="Hint text for game title text input.">
    HvZ
  </string>
  <string name="mission_settings_name_hint_text" definition="Hint text for mission title text input.">
    Mission 1 - Protect the Scientist
  </string>
  <string name="mission_settings_time" definition="Label for mission duration.">
    Time
  </string>
  <string name="mission_settings_details_label" definition="Label for mission details.">
    Details
  </string>
  <string name="mission_settings_allegiance_label" definition="Label for mission allegiance filter.">
    Allegiance
  </string>
  <string name="navigation_drawer_game_dashboard" definition="Navigation drawer menu item for opening the dashboard of a game.">
    Dashboard
  </string>
  <string name="navigation_drawer_game_list" definition="Navigation drawer menu item for opening the list of games.">
    Change game
  </string>
  <string name="navigation_drawer_create_game" definition="Navigation drawer menu item for creating a game.">
    Create new game
  </string>
  <string name="navigation_drawer_faq" definition="Navigation drawer menu item for opening the FAQ of a game.">
    FAQ
  </string>
  <string name="navigation_drawer_game_settings" definition="Navigation drawer menu item for opening settings for the current game.">
    Game settings
  </string>
  <string name="navigation_drawer_admin_chat_list" definition="Navigation drawer menu item for opening list of chats admin is in for the current game.">
    View admin chats
  </string>
  <string name="navigation_drawer_create_chat_with_admin" definition="Navigation drawer menu item for creating a chat with admins.">
    Chat with an Admin
  </string>
  <string name="navigation_drawer_infect_player" definition="Navigation drawer menu item for infecting a player.">
    Infect player
  </string>
  <string name="navigation_drawer_rewards" definition="Navigation drawer menu item for opening the reward dashboard for the game.">
    Rewards
  </string>
  <string name="navigation_drawer_redeem_reward" definition="Navigation drawer menu item for redeeming a reward code.">
    Redeem reward
  </string>
  <string name="navigation_drawer_rules" definition="Navigation drawer menu item for opening the rules of a game.">
    Rules
  </string>
  <string name="reward_settings_error_label" definition="Error label when short name is already used.">
    Error: name is already used
  </string>
  <string name="reward_settings_short_name_hint_text" definition="Hint text for an abbreviated reward for bravery.">
    valor
  </string>
  <string name="reward_settings_long_name_hint_text" definition="Hint text for long reward name of bravery.">
    Extreme Valor In Battle
  </string>
  <string name="reward_settings_label_points" definition="Label for the text input for specifying a reward's points.">
    Point value
  </string>
  <string name="reward_settings_label_short_name" definition="Label for the text input for specifying a reward's short name.">
    Short name
  </string>
  <string name="reward_settings_label_long_name" definition="Label for the text input for specifying a reward's long name.">
    Long name
  </string>
  <string name="reward_settings_label_description" definition="Label for the text input for specifying a reward's description.">
    Description
  </string>
  <string name="sign_out_button" definition="Sign out button.">
    Sign out
  </string>
  <string name="force_upgrade_image_content_description" definition="Content description for force upgrade image.">
    poo
  </string>
  <string name="markdown_dialog_trigger_content_description" definition="Content description for the button that opens the markdown cheatsheet.">
    View Markdown hints
  </string>
</resources>