<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <!-- Game Admin options. -->
  <group
    android:id="@+id/nav_admin_options"
    android:visible="false">
    <item
      android:id="@id/nav_admin_chat_list_fragment"
      android:icon="@drawable/ic_headset"
      android:title="@string/navigation_drawer_admin_chat_list" />

    <item
      android:id="@id/nav_reward_dashboard_fragment"
      android:icon="@drawable/ic_trophy"
      android:title="@string/navigation_drawer_rewards" />

    <item
      android:id="@id/nav_game_settings_fragment"
      android:icon="@drawable/ic_settings"
      android:title="@string/navigation_drawer_game_settings" />

  </group>

  <!-- Navigation Items defined by navigation graph. -->
  <group android:id="@+id/nav_game_options">

    <item
      android:id="@id/nav_redeem_reward_fragment"
      android:icon="@drawable/ic_trophy"
      android:title="@string/navigation_drawer_redeem_reward" />

    <item
      android:id="@id/nav_redeem_lifecode_fragment"
      android:icon="@drawable/ic_zed"
      android:title="@string/navigation_drawer_infect_player" />

    <item
      android:id="@id/nav_rules_fragment"
      android:icon="@drawable/ic_list"
      android:title="@string/navigation_drawer_rules" />

    <item
      android:id="@id/nav_faq_fragment"
      android:icon="@drawable/ic_help"
      android:title="@string/navigation_drawer_faq" />

    <item
      android:id="@id/nav_create_chat_with_admin"
      android:icon="@drawable/ic_headset"
      android:title="@string/navigation_drawer_create_chat_with_admin"
      app:actionViewClass="android.widget.ProgressBar" />
  </group>

  <group android:id="@+id/nav_global_options">
    <item
      android:id="@id/nav_game_list_fragment"
      android:icon="@drawable/ic_list"
      android:title="@string/navigation_drawer_game_list" />
    <item
      android:id="@id/nav_create_game_fragment"
      android:icon="@drawable/ic_plus"
      android:title="@string/navigation_drawer_create_game" />
  </group>

  <!-- Manual Navigation Item NOT controlled by navigation graph, controlled manually in MainActivity -->
  <group android:id="@+id/nav_system_options">
    <item
      android:id="@+id/nav_sign_out"
      android:icon="@drawable/ic_exit"
      android:title="@string/sign_out_button" />
  </group>
</menu>