<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_margin_horizontal"
    android:paddingEnd="@dimen/screen_margin_horizontal">

    <ProgressBar
      android:id="@+id/progress_bar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="match_parent"
      android:layout_height="@dimen/horizontal_progress_bar_height"
      android:indeterminate="true"
      android:paddingStart="@dimen/screen_margin_horizontal"
      android:paddingEnd="@dimen/screen_margin_horizontal"
      android:visibility="invisible" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/game_settings_game_name_label" />

    <androidx.emoji.widget.EmojiEditText
      android:id="@+id/mission_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/mission_settings_name_hint_text"
      android:maxLength="40"
      android:maxLines="1" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mission_settings_time" />

    <include layout="@layout/time_range_widget" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mission_settings_allegiance_label" />

    <RadioGroup
      android:id="@+id/radio_button_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:orientation="vertical"
      android:paddingBottom="16dp">

      <RadioButton
        android:id="@+id/radio_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allegiance_option_human" />

      <RadioButton
        android:id="@+id/radio_zombie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allegiance_option_zombie" />

      <RadioButton
        android:id="@+id/radio_undeclared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allegiance_option_undeclared" />

      <RadioButton
        android:id="@+id/radio_everyone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/allegiance_option_everyone" />
    </RadioGroup>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mission_settings_details_label"
      android:textSize="18sp" />

    <com.app.playhvz.common.ui.MarkdownEditText
      android:id="@+id/mission_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:background="@drawable/border_rectangle"
      android:gravity="start|top"
      android:lines="12" />

    <Button
      android:id="@+id/submit_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:enabled="false"
      android:text="@string/button_submit" />

    <Button
      android:id="@+id/delete_mission"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="Delete"
      android:visibility="gone" />

  </LinearLayout>
</ScrollView>
