<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/move_up_option"
    android:icon="@drawable/ic_expand_less"
    android:title="@string/button_move_up" />

  <item
    android:id="@+id/remove_order_option"
    android:icon="@drawable/ic_x"
    android:title="@string/button_remove_ordering" />

  <item
    android:id="@+id/move_down_option"
    android:icon="@drawable/ic_expand_more"
    android:title="@string/button_move_down" />

  <item
    android:id="@+id/delete_option"
    android:icon="@drawable/ic_x"
    android:title="@string/button_delete" />
</menu>