<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingStart="@dimen/screen_margin_horizontal"
  android:paddingEnd="@dimen/screen_margin_horizontal">

  <TextView
    style="@style/TextInputLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/game_settings_game_name_label" />

  <androidx.emoji.widget.EmojiEditText
    android:id="@+id/game_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/game_settings_game_name_hint_text"
    android:maxLength="40"
    android:maxLines="1" />

  <TextView
    style="@style/TextInputSubLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/game_settings_game_name_sublabel" />

  <Button
    android:id="@+id/submit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:enabled="false"
    android:text="@string/button_submit" />

  <Button
    android:id="@+id/delete_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="Delete game"
    android:visibility="gone" />

</LinearLayout>