<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_margin_horizontal"
    android:paddingEnd="@dimen/screen_margin_horizontal">

    <ProgressBar
      android:id="@+id/progress_bar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="match_parent"
      android:layout_height="@dimen/horizontal_progress_bar_height"
      android:indeterminate="true"
      android:paddingStart="@dimen/screen_margin_horizontal"
      android:paddingEnd="@dimen/screen_margin_horizontal"
      android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/image_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/border_rounded_corner"
      android:backgroundTint="@color/grey200"
      android:backgroundTintMode="src_atop">

      <include
        layout="@layout/reward_badge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/border_rounded_corner"
        android:padding="4dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary"
        tools:ignore="ContentDescription,RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reward_settings_label_points" />

    <EditText
      android:id="@+id/reward_points"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:text="@string/reward_settings_label_points"
      android:textSize="24sp" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reward_settings_label_short_name" />

    <androidx.emoji.widget.EmojiEditText
      android:id="@+id/reward_short_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/reward_settings_short_name_hint_text"
      android:maxLength="20"

      android:maxLines="1" />

    <TextView
      android:id="@+id/error_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reward_settings_error_label"
      android:textColor="@color/red"
      android:visibility="gone" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reward_settings_label_long_name" />

    <androidx.emoji.widget.EmojiEditText
      android:id="@+id/reward_long_name"
      style="@style/SentenceCaseTextInputStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/reward_settings_long_name_hint_text"
      android:maxLength="40"
      android:maxLines="1" />

    <TextView
      style="@style/TextInputLabel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/reward_settings_label_description" />

    <androidx.emoji.widget.EmojiEditText
      android:id="@+id/reward_description"
      style="@style/NormalTextInputStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:background="@drawable/border_rectangle"
      android:gravity="start|top"
      android:lines="12" />

    <Button
      android:id="@+id/submit_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:enabled="false"
      android:text="@string/button_submit" />

    <Button
      android:id="@+id/delete_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="Delete"
      android:visibility="gone" />
  </LinearLayout>
</ScrollView>
